# Text-to-speech-with-kokoro-83M

./: .gitignore  README.md  api.py  main.py  pyproject.toml  requirements.txt  run.sh  transcript.txt  utils.py
