[project]
name = "test-tts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "kokoro>=0.9.4",
    "pip",
    "python-multipart>=0.0.20",
    "soundfile",
    "tqdm>=4.67.1",
    "uvicorn[standard]>=0.35.0",
]
